--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
-    image: django-k8s:v1
+    image: goderash
     environment:
       - PORT=8020
     env_file:
@@ -19,13 +19,13 @@ services:
   postgres_db:
     image: postgres
     restart: always
-    command: -p 5434
+    command: -p 5432
     env_file:
       - web/.env
     expose:
-      - 5434
+      - 5432
     ports:
-      - "5434:5434"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis_db:
@@ -40,7 +40,7 @@ services:
     entrypoint: redis-server --appendonly yes --port 6388
 
 volumes:
-  # staticfiles:
-  #     external: true
+  staticfiles:
+      external: true
   postgres_data:
   redis_data:
