Crud for Services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - web/.env
     ports:
       - "8001:8020"
-    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
+    command: sh -c "chmod +x /app/migrate.sh && /app/entrypoint.sh"
     # volumes:
     #   - staticfiles:/app/staticfiles/
   postgres_db:
