--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,71 @@
-version: "3.9"
+# version: "3.9"
+# services:
+#   web:
+#     depends_on:
+#       - postgres_db
+#     build:
+#       context: ./web
+#       dockerfile: Dockerfile
+#     image: goderash
+#     environment:
+#       - PORT=8020
+#     env_file:
+#       - web/.env
+#     ports:
+#       - "8001:8020"
+#     command: python manage.py runserver 0.0.0.0:8000
+#     # volumes:
+#     #   - staticfiles:/app/staticfiles/
+# postgres_db:
+#   image: postgres
+#   restart: always
+#   command: -p 5432
+#   env_file:
+#     - web/.env
+#   expose:
+#     - 5432
+#   ports:
+#     - "5432:5432"
+#   volumes:
+#     - postgres_data:/var/lib/postgresql/data/
+#   redis_db:
+#     image: redis
+#     restart: always
+#     expose:
+#       - 6388
+#     ports:
+#       - "6388:6388"
+#     volumes:
+#       - redis_data:/data
+#     entrypoint: redis-server --appendonly yes --port 6388
+
+# volumes:
+#   # staticfiles:
+#   #     external: true
+#   postgres_data:
+#   redis_data:
+
+# The docker-compose.yml file describes the services that make your app. In this example those services are a web server and database.
+
+version: "3.8"
+
 services:
   web:
-    depends_on:
-      - postgres_db
     build:
       context: ./web
       dockerfile: Dockerfile
+    container_name: go_derash
     image: goderash
-    environment:
-      - PORT=8020
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/usr/src/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres_db
     env_file:
       - web/.env
-    ports:
-      - "8001:8020"
-    command: sh -c "chmod +x /app/migrate.sh && /app/entrypoint.sh"
-    # volumes:
-    #   - staticfiles:/app/staticfiles/
+
   postgres_db:
     image: postgres
     restart: always
@@ -28,19 +78,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-  redis_db:
-    image: redis
-    restart: always
-    expose:
-      - 6388
-    ports:
-      - "6388:6388"
-    volumes:
-      - redis_data:/data
-    entrypoint: redis-server --appendonly yes --port 6388
 
 volumes:
-  # staticfiles:
-  #     external: true
   postgres_data:
-  redis_data:
