--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,7 +1,31 @@
-Django>=4.2,<5.0
-gunicorn
-requests
-django-dotenv
-psycopg2-binary
-django-storages
-boto3
+asgiref==3.7.2
+attrs==23.1.0
+boto3==1.33.10
+botocore==1.33.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
+Django==4.2.8
+django-cors-headers==4.3.1
+django-dotenv==1.4.2
+django-extensions==3.2.3
+django-storages==1.14.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
+idna==3.6
+jmespath==1.0.1
+packaging==23.2
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pydot==1.4.2
+PyJWT==2.8.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+s3transfer==0.8.2
+six==1.16.0
+sqlparse==0.4.4
+tzdata==2023.3
+urllib3==2.0.7
