--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
           sudo apt-get install -y lftp
       - name: Deploy to cPanel
         run: |
-          # Example: Use FTP to copy files
-          /usr/bin/lftp -u $FTP_USER,$FTP_PASSWORD -e "mirror -R . /public_html; exit" $FTP_HOST
+          # # Example: Use FTP to copy files
+          # /usr/bin/lftp -u $FTP_USER,$FTP_PASSWORD -e "mirror -R . /public_html; exit" $FTP_HOST
           python manage.py migrate
           python manage.py collectstatic --noinput
