--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2.4.4
         with:
-          python-version: ${{ matrix.python-version }}
+          # python-version: ${{ matrix.python-version }}
+          ftp-server: ${{ sercrete.FTP_HOST }}
+          ftp-username: ${{ sercrete.FTP_USER }}
+          ftp-password: ${{ sercrete.FTP_PASSWORD }}
 
       - name: Install Dependencies
         run: |
@@ -56,6 +59,6 @@ jobs:
       - name: Deploy to cPanel
         run: |
           # # Example: Use FTP to copy files
-          lftp -u $FTP_USER,$FTP_PASSWORD -e "mirror -R . /public_html; exit" $FTP_HOST
+          # lftp -u $FTP_USER,$FTP_PASSWORD -e "mirror -R . /public_html; exit" $FTP_HOST
           python manage.py migrate
           python manage.py collectstatic --noinput
