--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Checkout Repository
-        uses: actions/checkout@v2.4.4
         with:
           python-version: ${{ matrix.python-version }}
-          # ftp-server: ${{ sercrete.FTP_HOST }}
-          # ftp-username: ${{ sercrete.FTP_USER }}
-          # ftp-password: ${{ sercrete.FTP_PASSWORD }}
+          ftp-server: ${{ sercrete.FTP_HOST }}
+          ftp-username: ${{ sercrete.FTP_USER }}
+          ftp-password: ${{ sercrete.FTP_PASSWORD }}
 
       - name: Install Dependencies
         run: |
@@ -59,6 +57,6 @@ jobs:
       - name: Deploy to cPanel
         run: |
           # # Example: Use FTP to copy files
-          $FTP_USER,$FTP_PASSWORD, $FTP_HOST
+          # $FTP_USER,$FTP_PASSWORD, $FTP_HOST
           python manage.py migrate
           python manage.py collectstatic --noinput
