--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,9 @@ jobs:
 
         with:
           python-version: ${{ matrix.python-version }}
-          ftp-server: ${{ secrete.FTP_HOST }}
-          ftp-username: ${{ secrete.FTP_USER }}
-          ftp-password: ${{ secrete.FTP_PASSWORD }}
+          ftp-server: ${{ secrets.FTP_HOST }}
+          ftp-username: ${{ secrets.FTP_USER }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
 
       - name: Install Dependencies
         run: |
@@ -56,7 +56,7 @@ jobs:
           sudo apt-get install -y lftp
       - name: Deploy to cPanel
         run: |
-          # # Example: Use FTP to copy files
-          # $FTP_USER,$FTP_PASSWORD, $FTP_HOST
+          # Example: Use FTP to copy files
+          /usr/bin/lftp -d -u ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} -e "mirror -R . /public_html; exit" ${{ secrets.FTP_HOST }}
           python manage.py migrate
           python manage.py collectstatic --noinput
