--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Checkout Repository
+        uses: actions/checkout@v2.4.4
         with:
-          python-version: [3.11.6]
-          # ftp-server: ${{ secrets.FTP_HOST }}
-          # ftp-username: ${{ secrets.FTP_USER }}
-          # ftp-password: ${{ secrets.FTP_PASSWORD }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Dependencies
         run: |
