--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       run:
         working-directory: ./web
     env:
-      DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
+      DJANGO_SECRET_KEY: 'azb2h+9yo=pfd2t1+q\&9g6cf\$iksoq(9jy8%9w=t_q_^gjtlt7'
       POSTGRES_DB: go_derash
       POSTGRES_PASSWORD: 1234
       POSTGRES_USER: postgres
