--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,11 +45,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Install lftp
-        run: |
-          sudo apt-get install -y lftp
       - name: Deploy to cPanel
         run: |
-          lftp -d -u ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} -e "mirror -R . /public_html; exit" ${{ secrets.FTP_HOST }}
+          ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} , ${{ secrets.FTP_HOST }}
           python manage.py migrate
           python manage.py collectstatic --noinput
