--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,6 @@ jobs:
           pip install -r requirements.txt
       - name: Deploy to cPanel
         run: |
-          ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} , ${{ secrets.FTP_HOST }}
+          # ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} , ${{ secrets.FTP_HOST }}
           python manage.py migrate
           python manage.py collectstatic --noinput
