--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,8 @@ jobs:
           pip install -r requirements.txt
       - name: Deploy to cPanel
         run: |
-          # ${{ secrets.FTP_USER }},${{ secrets.FTP_PASSWORD }} , ${{ secrets.FTP_HOST }}
+          ftp-server: ${{ secrets.FTP_HOST }}
+          ftp-username: ${{ secrets.FTP_USER }}
+          ftp-password: ${{ secrets.FTP_PASSWORD }}
           python manage.py migrate
           python manage.py collectstatic --noinput
