--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,17 @@
-name: Deploy to cPanel
-
-on:
-  push:
-    branches:
-      - main
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  deploy:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./web
-    env:
-      DJANGO_SECRET_KEY: 'azb2h+9yo=pfd2t1+q\&9g6cf\$iksoq(9jy8%9w=t_q_^gjtlt7'
-      POSTGRES_DB: go_derash
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_USER: postgres
-      POSTGRES_HOST: localhost
-      POSTGRES_PORT: 5432
-      DB_IGNORE_SSL: "true"
-    services:
-      postgres_main:
-        image: postgres:13
-        env:
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready 
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 5
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.11.6]
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Deploy to cPanel
-        run: |
-          # ftp-server: ${{ secrets.FTP_HOST}}
-          # ftp-username: ${{ secrets.FTP_USER }}
-          # ftp-password: ${{ secrets.FTP_PASSWORD }}
-          python manage.py migrate
-          python manage.py collectstatic --noinput
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: api.gooderash.com
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          server_dir: ./web
