--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,8 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
 
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: api.gooderash.com
+          server: ftp.gooderash.com
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           server_dir: ./web
