--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,61 +1,61 @@
-name: Deploy to cPanel
+# name: Deploy to cPanel
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./web
-    env:
-      DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
-      POSTGRES_DB: go_derash
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_USER: postgres
-      POSTGRES_HOST: localhost
-      POSTGRES_PORT: 5432
-      DB_IGNORE_SSL: "true"
-    services:
-      postgres_main:
-        image: postgres:13
-        env:
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready 
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 5
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.11.6]
-    steps:
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          server: ftp.gooderash.com
-          username: ${{ secrets.usernama }}
-          password: ${{ secrets.password }}
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./web
+#     env:
+#       DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
+#       POSTGRES_DB: go_derash
+#       POSTGRES_PASSWORD: 1234
+#       POSTGRES_USER: postgres
+#       POSTGRES_HOST: localhost
+#       POSTGRES_PORT: 5432
+#       DB_IGNORE_SSL: "true"
+#     services:
+#       postgres_main:
+#         image: postgres:13
+#         env:
+#           POSTGRES_DB: ${{ env.POSTGRES_DB }}
+#           POSTGRES_USER: ${{ env.POSTGRES_USER }}
+#           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+#         ports:
+#           - 5432:5432
+#         options: >-
+#           --health-cmd pg_isready
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+#     strategy:
+#       max-parallel: 4
+#       matrix:
+#         python-version: [3.11.6]
+#     steps:
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           server: ftp.gooderash.com
+#           username: ${{ secrets.usernama }}
+#           password: ${{ secrets.password }}
 
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Install lftp
-        run: |
-          sudo apt-get install -y lftp
-      - name: Deploy to cPanel
-        run: |
-          python manage.py migrate
-          python manage.py collectstatic --noinput
+#       - name: Install Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#       - name: Install lftp
+#         run: |
+#           sudo apt-get install -y lftp
+#       - name: Deploy to cPanel
+#         run: |
+#           python manage.py migrate
+#           python manage.py collectstatic --noinput
