--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          server: www.gooderash.com
-          username: ${{ secrets.FTP_USER }}
-          password: ${{ secrets.FTP_PASSWORD }}
+          server: ftp.gooderash.com
+          username: ${{ secrets.USERNAME1 }}
+          password: ${{ secrets.FTP_PASSWORD1 }}
           local-dir: ./web
           remote-dir: /public_html
 
