--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           server: ftp.gooderash.com
           username: ${{ secrets.USERNAME1 }}
-          password: ${{ secrets.FTP_PASSWORD1 }}
+          password: ${{ secrets.PASSWORD1 }}
 
       - name: Checkout Repository
         uses: actions/checkout@v2
