--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,6 @@ jobs:
     defaults:
       run:
         working-directory: ./web
-    env:
-      DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
-      POSTGRES_DB: go_derash
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_USER: postgres
-      POSTGRES_HOST: localhost
-      POSTGRES_PORT: 5432
-      DB_IGNORE_SSL: "true"
     services:
       postgres_main:
         image: postgres:13
@@ -42,7 +34,7 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          server: ftp.api.gooderash.com
+          server: ftp.gooderash.com
           username: ${{ secrets.USERNAME1 }}
           password: ${{ secrets.PASSWORD1 }}
 
