--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,14 @@ jobs:
     defaults:
       run:
         working-directory: ./web
+    env:
+      DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
+      POSTGRES_DB: go_derash
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_USER: postgres
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+      DB_IGNORE_SSL: "true"
     services:
       postgres_main:
         image: postgres:13
