--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,26 +8,29 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./web
     steps:
-        with:
-          FTP-SERVER: ftp.gooderash.com
-          FTP-USERNAME: ${{ secrets.FTP_USERNAME }}
-          FTP-PASSWORD: ${{ secrets.FTP_PASSWORD }}
-
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: Set Up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Install lftp
         run: |
           sudo apt-get install -y lftp
-      - name: Deploy to cPanel
+
+      - name: Migrate Database and Collect Static Files
         run: |
           python manage.py migrate
           python manage.py collectstatic --noinput
+
+      - name: Deploy to cPanel
+        run: |
+          lftp -e "set ssl:verify-certificate no; mirror -R -e -x .git -x venv -x __pycache__ . /home/gooderxa/goderash.com/api; exit" -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ftp://ftp.gooderash.com
