--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Migrate Database and Collect Static Files
         run: |
+          python manage.py makemigratios
           python manage.py migrate
           python manage.py collectstatic --noinput
 
