--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Migrate Database and Collect Static Files
         run: |
-          python manage.py makemigratios
+          python manage.py makemigrations
           python manage.py migrate
           python manage.py collectstatic --noinput
 
