--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,30 +11,51 @@ jobs:
     defaults:
       run:
         working-directory: ./web
+    env:
+      DJANGO_SECRET_KEY: azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
+      POSTGRES_DB: go_derash
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_USER: postgres
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+      DB_IGNORE_SSL: "true"
+    services:
+      postgres_main:
+        image: postgres:13
+        env:
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready 
+          --health-interval 10s 
+          --health-timeout 5s 
+          --health-retries 5
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.11.5]
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+
       - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: Set Up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Install lftp
         run: |
           sudo apt-get install -y lftp
-
-      - name: Migrate Database and Collect Static Files
+      - name: Deploy to cPanel
         run: |
-          python manage.py makemigrations
           python manage.py migrate
           python manage.py collectstatic --noinput
-
-      - name: Deploy to cPanel
+      - name: Send to cpanel
         run: |
           lftp -e "set ssl:verify-certificate no; mirror -R -e -x .git -x venv -x __pycache__ . /home/gooderxa/goderash.com/api; exit" -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ftp://ftp.gooderash.com
