--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
+        with:
+          server: ftp.gooderash.com
+          username: ${{ secrets.USERNAME1 }}
+          password: ${{ secrets.FTP_PASSWORD1 }}
+          local-dir: ./web
+          remote-dir: /public_html
 
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -56,6 +62,3 @@ jobs:
         run: |
           python manage.py migrate
           python manage.py collectstatic --noinput
-      - name: Send to cpanel
-        run: |
-          lftp -e "set ssl:verify-certificate no; mirror -R -e -x .git -x venv -x __pycache__ . /home/gooderxa/goderash.com/api; exit" -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ftp://ftp.gooderash.com
