--- a/web/.env
+++ b/web/.env
@@ -7,7 +7,7 @@ DJANGO_SECRET_KEY=azb2h+9yo=pfd2t1+q&9g6cf$iksoq(9jy8%9w=t_q_^gjtlt7
 
 POSTGRES_READY=0
 POSTGRES_DB=go_derash
-POSTGRES_PASSWORD=1234
+POSTGRES_PASSWORD=Qz5)Df3VL-5-M[y8l
 POSTGRES_USER=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
